added few links in education

--- a/templates/Education.html
+++ b/templates/Education.html
@@ -90,7 +90,7 @@
             <div class="card-body">
                 <h5 class="card-title">The Virtual Research Building Textbook</h5>
                 <p class="card-text">Explore foundational concepts in AI-powered robotics with this comprehensive textbook. Dive into topics like cognitive robotics, real-time simulation, and autonomous navigation.</p>
-                <a href="#" class="btn btn-primary">Access the Textbook</a>
+                <a href="https://textbook.intel4coro.de/" class="btn btn-primary" target="_blank">Access the Textbook</a>
             </div>
         </div>
     </section>
@@ -102,7 +102,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Introduction to Robotics</h5>
                         <p class="card-text">A beginner-friendly workshop covering robotic basics and key concepts.</p>
-                        <a href="#" class="btn btn-primary">Start Tutorial</a>
+                        <a href="https://jupyter.intel4coro.de/user/artnie-rpwr-assignments-ov29j5kk/lab/tree/rpwr-assignments/01_git-linux-python/a1_setup.ipynb" 
+                        class="btn btn-primary" target="_blank">Start Tutorial</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +121,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Advanced Cognitive Robotics</h5>
                         <p class="card-text">A deep dive into cognitive architectures for advanced robotics systems.</p>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <a href="http://www.vernon.eu/cognitive_robotics/index.htm" target="_blank" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
             </div>
