--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -23,7 +23,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../images/bg_image1.png');
+            background-image: url('../images/stair_robots.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
